# catinmath

./: LICENSE  README.md  __init__.py  model_populasi_kucing.py  rumus_daya_tahan_fisik.py  rumus_energi_metabolis.py  rumus_kebutuhan_cairan.py  rumus_kebutuhan_makanan.py  rumus_kebutuhan_vitamin_mineral.py  rumus_konversi_umur.py  rumus_pertumbuhan_kucing.py  setup.cfg
src/: __init__.py  rumus_imt_kucing.py  rumus_probabilitas_genetik.py
