[project]
name = "catinmath"
version = "0.0.1"
authors = [
  { name="Muhammad Fajar Agus Saputra", email="muhfajarags@gmail.com" },
]
description = "package that contains about cat formulas"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]